made file stucture

--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <div class="contact-form">
+    <form class="user-form">
+      <input class="user-from__name" type="text" name="userName">
+      <input class="user-from__phone" type="text" type="phone" name="phone">
+      <button class="sendBtn" type="submit">Send</button>
+    </form>
   
+    <div class="user-reply">
+      <h2>Введіть ваші данні до форми</h2>
+      <div class="user-reply"></div>
+    </div>
+  </div>
 
   <script src="./js/script.js"></script>
 </body>
