realized functional of sending data to server and getting response

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div class="user-form__container">
         <h3 class="user-form__header">Ваш телефон</h3>
-        <input class="user-from__item user-from__phone" type="text" type="phone" name="phone" placeholder="Введіть ваше телефон">
+        <input class="user-from__item user-from__phone" type="text" type="phone" name="userPhone" placeholder="Введіть ваше телефон">
       </div>
       <button class="sendBtn" type="submit">Відправити</button>
     </form>
